apps/base/podinfo/ingressroute-traefik.yaml
# Example IngressRoute for podinfo
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: podinfo-ingressroute
  namespace: podinfo
  annotations:
    external-dns.alpha.kubernetes.io/target: 10.0.10.21
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`podinfo.lab.biodrone.xyz`)
      kind: Rule
      services:
        - name: podinfo
          port: 9898
  tls:
    secretName: podinfo-certificate-production
